--- a/vignettes/spatialFDA.bib
+++ b/vignettes/spatialFDA.bib
@@ -106,20 +106,27 @@
   title={GraphCompass: spatial metrics for differential analyses of cell organization across conditions},
   author={Ali, Mayar and Kuijs, Merel and Hediyeh-Zadeh, Soroor and Treis, Tim and Hrovatin, Karin and Palla, Giovanni and Schaar, Anna C and Theis, Fabian J},
   journal={Bioinformatics},
-  volume={40},
-  number={Supplement\_1},
-  pages={i548--i557},
-  year={2024},
-  publisher={Oxford University Press}
+  year={2024}
 }
 
 @article{canete2022spicyr,
   title={spicyR: spatial analysis of in situ cytometry data in R},
   author={Canete, Nicolas P and Iyengar, Sourish S and Ormerod, John T and Baharlou, Heeva and Harman, Andrew N and Patrick, Ellis},
   journal={Bioinformatics},
-  volume={38},
-  number={11},
-  pages={3099--3105},
-  year={2022},
-  publisher={Oxford University Press}
+  year={2022}
 }
+
+@article{sun2011functional,
+  title={Functional boxplots},
+  author={Sun, Ying and Genton, Marc G},
+  journal={Journal of Computational and Graphical Statistics},
+  year={2011}
+}
+
+@Manual{ramsay2024fda,
+    title = {fda: Functional Data Analysis},
+    author = {James Ramsay},
+    year = {2024},
+    note = {R package version 6.2.0},
+    url = {https://CRAN.R-project.org/package=fda},
+  }
